<resources>
    <string name="app_name">intelliCane</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="login_error">Authentication failed</string>
    <string name="welcome_message">Hello, Your are signed in!</string>
    <string name="minimum_password">Enter at least 6 characters!</string>
    <string name="admin">Administrator</string>
    <string name="add_user">Add new user</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="select_login_0">I am a </string>
    <string name="select_login_patient">Patient</string>
    <string name="select_login_therapist">Therapist</string>
    <string name="select_login_admin">Administrator</string>
    <string name="activity_login_create_account">Create new account</string>
    <string name="Create_Association">Create Association</string>
    <string name="Select_Session">Select Session</string>
    <string name="Select_Patient">Select Patient</string>
    <string name="Administrator">Administrator</string>
    <string name="Select_Therapist">Select Therapist</string>
    <string name="Get_User">Get User</string>
    <string name="Delete_User">Delete User</string>
    <string name="Delete_User_Data">Delete User Data</string>
    <string name="New_user_is_a">New user is a…</string>
    <string name="Email">Email</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Phone">Phone</string>
    <string name="Photo_URL">Photo URL</string>
    <string name="Display_Name">Display Name</string>
    <string name="Therapist">Therapist</string>
    <string name="Patient">Patient</string>
    <string name="Add_User">Add User</string>
    <string name="Select_a_Patient">Select a Patient</string>
    <string name="Fname">Fname</string>
    <string name="Lname">Lname</string>
    <string name="Disabled">Disabled</string>
    <string name="Update_User">Update User</string>
    <string name="Verified">Verified</string>
    <string name="welcome_administrator">Welcome, administrator! Please select from the tasks below: </string>
    <string name="welcome_pt">Welcome! Please select from the tasks below: </string>
    <string name="Enter_user_email_delete_user">Please enter patient or physical therapist\'s e-mail to delete their account:</string>
    <string name="Enter_user_email_delete_data">Please enter patient or physical therapist\'s e-mail to delete their session data:</string>
    <string name="trans_accel">Transverse Acceleration </string>
    <string name="abs_accel">Absolute Acceleration </string>
    <string name="Handle">Handle </string>
    <string name="Base">Base </string>
</resources>
