<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp">


    <EditText
        android:id="@+id/signUpUserFname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/First_Name" />

    <EditText
        android:id="@+id/signUpUserLname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/Last_Name" />

    <EditText
        android:id="@+id/signUpUserEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/Email"
        />
    <EditText
        android:id="@+id/signUpUserPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textVisiblePassword"/>

    <RadioGroup
        android:id="@+id/signUpUserRoleRadio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </RadioGroup>


    <Button
        android:id="@+id/buttonCreateUser"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:background="@drawable/button"
        android:onClick="createNewUserRequest"
        android:text="@string/Add_User"
        android:textColor="@color/colorPrimary2"/>
</LinearLayout>