<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:layout_margin="45dp"
        android:textColor="@color/colorPrimary1"
        android:text="@string/Enter_user_email_delete_user" />

    <EditText
        android:id="@+id/deleteUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="45dp"
        android:hint="@string/email"
        android:textSize="48sp"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"/>

    <Button
        android:id="@+id/adminDeleteUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="deleteUserRequest"
        android:textSize="48sp"
        android:padding="30dp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary2"
        android:background="@drawable/pinkbutton"
        android:text="@string/Delete_User"
        android:layout_marginTop="50dp"/>


</LinearLayout>