<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp">


    <EditText
        android:id="@+id/newPatientFname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/First_Name" />

    <EditText
        android:id="@+id/newPatientLname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Last_Name" />

    <EditText
        android:id="@+id/newPatientEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/Email"
        />
    <EditText
        android:id="@+id/newPatientPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="phone"
        android:inputType="phone"/>


    <Button
        android:id="@+id/buttonCreatePatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/pinkbutton"
        android:onClick="createNewPatientRequest"
        android:text="Add New Patient"
        android:padding="20dp"
        android:textSize="48sp"
        android:textColor="@color/colorPrimary" />
</LinearLayout>