<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="23dp"
        android:layout_marginTop="98dp"
        android:text="Welcome! Please select your role:"
        android:textColor="@color/colorPrimary1"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/imageButtonAdm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:adjustViewBounds="true"
        android:background="@drawable/button"
        android:contentDescription="@string/select_login_admin"
        android:maxHeight="150dp"
        android:maxWidth="150dp"
        android:onClick="goto_activity_login"
        android:scaleType="fitCenter"
        android:scrollbarSize="@dimen/com_facebook_button_corner_radius"
        android:visibility="visible"
        app:srcCompat="@drawable/administrator" />


    <ImageButton
        android:id="@+id/imageButtonThera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:adjustViewBounds="true"
        android:background="@drawable/button"
        android:contentDescription="@string/select_login_therapist"
        android:maxHeight="150dp"
        android:maxWidth="150dp"
        android:onClick="goto_activity_login"
        android:scaleType="fitCenter"
        android:scrollbarSize="@dimen/com_facebook_button_corner_radius"
        android:visibility="visible"
        app:srcCompat="@drawable/physicaltherapist" />

    <ImageButton
        android:id="@+id/imageButtonPatie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        android:scaleType="fitCenter"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/button"
        android:contentDescription="@string/select_login_patient"
        android:onClick="goto_activity_login"
        android:scrollbarSize="@dimen/com_facebook_button_corner_radius"
        android:visibility="visible"
        app:srcCompat="@drawable/patient" />

</LinearLayout>